--- a/www/css/list-view.css
+++ b/www/css/list-view.css
@@ -3,11 +3,18 @@ ul {
 }
 li {
 	height: 20%;
+	clear: both;
+}
+h2 {
+	font-family:'BebasNeueBold', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+	font-size: 24px;
+	font-weight: bold;
+	margin: 0;
 }
 .thumbnail {
-	height: 150px;
-	width: 200px;
-	width: 20%;
+	height: 15rem;
+	width: 9rem;
+	margin-right: 2rem;
 	background-size: 100% !important;
 	float: left;
 }
